# GL_beauty

./: .gitignore  CMakeLists.txt  readme.md
include/learnopengl/: shader_s.h
src/GL_bigeyes/: CMakeLists.txt  bigeyes.fs  gl_bigeyes.cpp  glad.c
